--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,7 @@
         h1{
             color:blue;
             font-style: monospace;
+            font-style: italic;
         }
     </style>
 </head>
